--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         </ul>
     </header>
     <main class="content">
-        <section class="info"></section>
+        <section class="info">
+            <h2>test of git branching</h2>
+        </section>
         <section class="suggestions"></section>
         <section class="portfolio"></section>
         <section class="benefits"></section>
