--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body class="root">
     <header class="header">
         <div class="heading">
-            <a href="#" class="header__logo-link">
-                <img src="/images/logo_ust.svg" alt="логотип" class="header__logo">
-                <h2 lang="en" class="header__logo-title">Union Smart Technology</h2>
-                <p lang="en" class="header__logo-subtitle">Simple solutions for complex problems</p>
+            <a href="#" class="heading__logo-link">
+                <img src="/images/logo_ust.svg" alt="логотип" class="heading__logo">
+                <h2 lang="en" class="heading__logo-title">Union Smart Technology</h2>
+                <p lang="en" class="heading__logo-subtitle">Simple solutions for complex problems</p>
             </a>
-            <nav class="header__menu">
-                <ul class="header__menu-links">
-                    <li class="header__menu-item"><a href="#" class="header__menu-link">Главная</a></li>
-                    <li class="header__menu-item"><a href="#" class="header__menu-link">Команда</a></li>
-                    <li class="header__menu-item"><a href="#" class="header__menu-link">Услуги</a></li>
-                    <li class="header__menu-item"><a href="#" class="header__menu-link">Карьера</a></li>
-                    <li class="header__menu-item"><a href="#" class="header__menu-link">Портфолио</a></li>
-                    <li class="header__menu-item"><a href="#" class="header__menu-link">Контакты</a></li>
+            <nav class="heading__menu">
+                <ul class="heading__menu-links">
+                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Главная</a></li>
+                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Команда</a></li>
+                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Услуги</a></li>
+                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Карьера</a></li>
+                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Портфолио</a></li>
+                    <li class="heading__menu-item"><a href="#" class="heading__menu-link">Контакты</a></li>
                 </ul>
-                <a href="#" class="header__menu-link"><img src="/images/icon_flag.svg" alt="значок_флага"
-                        class="menu__lang-link"></a>
-                <form action="" class="header__search-form">
-                    <input type="search" class="header__search-box">
-                    <i class="header__search-icon"></i>
+                <a href="#" class="heading__menu-link"><img src="/images/icon_flag.svg" alt="значок_флага"
+                        class="heading__menu-lang-link"></a>
+                <form action="" class="heading__search-form">
+                    <input type="search" class="heading__search-box">
+                    <i class="heading__search-icon"></i>
                 </form>
             </nav>
         </div>
@@ -40,7 +40,7 @@
             <p class="header__subtitle">Мы создаем кроссплатформенные мобильные приложения и веб-платформы и находим для
                 них
                 лучшие решения.</p>
-            <button type="submit" class="button__project-order">Заказать проект</button>
+            <button type="submit" class="button-project-order">Заказать проект</button>
         </div>
         <ul class="header__advantages">
             <li>
@@ -62,9 +62,7 @@
         </ul>
     </header>
     <main class="content">
-        <section class="info">
-            <h2>test of git branching</h2>
-        </section>
+        <section class="info"></section>
         <section class="suggestions"></section>
         <section class="portfolio"></section>
         <section class="benefits"></section>
