feat: suggestions block

--- a/index.html
+++ b/index.html
@@ -86,7 +86,51 @@
                 </div>
             </div>
         </section>
-        <section class="suggestions"></section>
+        <section class="suggestions suggestions_place_main">
+            <h2 class="suggestions__title">Наши предложения</h2>
+            <p class="suggestions__subtitle">Разработка полного цикла</p>
+            <p class="suggestions__offer">Мы можем разработать для вас любое индивидуальное решение. Наша компания
+                обладает широкими возможностями для успешного создания технически-сложных систем.</p>
+            <div class="cards">
+                <article class="cards__item">
+                    <img src="images/icon_programming.svg" alt="программируем" class="cards__image">
+                    <h3 class="cards__title">Программируем</h3>
+                    <p class="cards__subtitle">Создаём расширяемую архитектуру, пишем чистый и стабильный код.
+                        Интегрируемся с технологиями заказчика.</p>
+                </article>
+                <article class="cards__item">
+                    <img src="images/icon_testing.svg" alt="тестируем" class="cards__image">
+                    <h3 class="cards__title">Тестируем</h3>
+                    <p class="cards__subtitle">Проводим ручное функциональное тестирование и пишем UI-автотесты. Готовим
+                        чек-листы и тест-кейсы.</p>
+                </article>
+                <article class="cards__item">
+                    <img src="images/icon_support.svg" alt="поддерживаем" class="cards__image">
+                    <h3 class="cards__title">Поддерживаем</h3>
+                    <p class="cards__subtitle">Работаем по SLA. Следим за стабильностью работы приложения, обновляем под
+                        новые устройства и версии iOS и Android.</p>
+                </article>
+                <article class="cards__item">
+                    <img src="images/icon_analyzing.svg" alt="анализируем" class="cards__image">
+                    <h3 class="cards__title">Анализируем</h3>
+                    <p class="cards__subtitle">Пишем ТЗ для разработки, учитывая бизнес-процессы и технологии заказчика
+                        и потребности пользователей.</p>
+                </article>
+                <article class="cards__item">
+                    <img src="images/icon_prototyping.svg" alt="прототипируем" class="cards__image">
+                    <h3 class="cards__title">Прототипируем</h3>
+                    <p class="cards__subtitle">Прорабатываем пользовательские сценарии, проектируем логику приложения,
+                        скечируем основные экраны.</p>
+                </article>
+                <article class="cards__item">
+                    <img src="images/icon_designing.svg" alt="дизайним" class="cards__image">
+                    <h3 class="cards__title">Дизайним</h3>
+                    <p class="cards__subtitle">Адаптируем фирменный стиль заказчика к гайдлайнам платформ. Рисуем
+                        удобные и понятные интерфейсы.</p>
+                </article>
+            </div>
+            <a href="#" class="suggestions__link">Все услуги &rarr;</a>
+        </section>
         <section class="portfolio"></section>
         <section class="benefits"></section>
         <section class="clients"></section>
