feat: block-heading

--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
             </div>
         </section>
         <section class="suggestions suggestions_place_main">
-            <h2 class="suggestions__title">Наши предложения</h2>
-            <p class="suggestions__subtitle">Разработка полного цикла</p>
-            <p class="suggestions__offer">Мы можем разработать для вас любое индивидуальное решение. Наша компания
-                обладает широкими возможностями для успешного создания технически-сложных систем.</p>
+            <div class="block__heading">
+                <h2 class="block__heading-title">Наши предложения</h2>
+                <p class="block__heading-subtitle">Разработка полного цикла</p>
+                <p class="block__heading-description">Мы можем разработать для вас любое индивидуальное решение. Наша
+                    компания
+                    обладает широкими возможностями для успешного создания технически-сложных систем.</p>
+            </div>
             <div class="cards">
                 <article class="cards__item">
                     <img src="images/icon_programming.svg" alt="программируем" class="cards__image">
@@ -131,7 +134,16 @@
             </div>
             <a href="#" class="suggestions__link">Все услуги &rarr;</a>
         </section>
-        <section class="portfolio"></section>
+        <section class="portfolio">
+            <div class="block-heading">
+                <h2 class="block-heading__title">Портфолио</h2>
+                <p class="block-heading__subtitle">Завершенные проекты</p>
+                <p class="blockheading__description">Мы специализируемся на предоставлении программного обеспечения
+                    высшего качества и предоставлении высококвалифицированных команд с опытом в области разработки
+                    блокчейнов, аналитики больших данных и AI/ML, а также услуг по разработке программного обеспечения
+                    на заказ.</p>
+            </div>
+        </section>
         <section class="benefits"></section>
         <section class="clients"></section>
         <section class="contacts"></section>
