feat: add portfolio block

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </ul>
     </header>
     <main class="content">
-        <section class="info info_place_main">
+        <section class="info main-placement">
             <figure class="info__picture">
                 <figcaption class="info__caption">О нас</figcaption>
                 <img src="images/why_ust.png" alt="" class="info__image">
@@ -81,16 +81,16 @@
                     реагировать на потребности заказчиков со всего света, сохраняя комфортный уровень цен.
                 </p>
                 <div class="info__buttons">
-                    <button type="button" class="info__vacations">Вакансии</button>
-                    <button type="button" class="info__read-more">Читать далее</button>
+                    <button type="button" class="button-vacations">Вакансии</button>
+                    <button type="button" class="button-read-more">Читать далее</button>
                 </div>
             </div>
         </section>
-        <section class="suggestions suggestions_place_main">
-            <div class="block__heading">
-                <h2 class="block__heading-title">Наши предложения</h2>
-                <p class="block__heading-subtitle">Разработка полного цикла</p>
-                <p class="block__heading-description">Мы можем разработать для вас любое индивидуальное решение. Наша
+        <section class="suggestions main-placement">
+            <div class="block-heading">
+                <h2 class="block-heading__title">Наши предложения</h2>
+                <p class="block-heading__subtitle">Разработка полного цикла</p>
+                <p class="block-heading__description">Мы можем разработать для вас любое индивидуальное решение. Наша
                     компания
                     обладает широкими возможностями для успешного создания технически-сложных систем.</p>
             </div>
@@ -134,14 +134,50 @@
             </div>
             <a href="#" class="suggestions__link">Все услуги &rarr;</a>
         </section>
-        <section class="portfolio">
-            <div class="block-heading">
+        <section class="portfolio main-placement">
+            <div class="block-heading block-heading_place_portfolio">
                 <h2 class="block-heading__title">Портфолио</h2>
                 <p class="block-heading__subtitle">Завершенные проекты</p>
-                <p class="blockheading__description">Мы специализируемся на предоставлении программного обеспечения
+                <p class="block-heading__description">Мы специализируемся на предоставлении программного обеспечения
                     высшего качества и предоставлении высококвалифицированных команд с опытом в области разработки
                     блокчейнов, аналитики больших данных и AI/ML, а также услуг по разработке программного обеспечения
                     на заказ.</p>
+            </div>
+            <div class="portfolio__cards">
+                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_mobile">
+                    <img src="images/mobile_control.png" alt="мобильный_контроль" class="portfilio__card-image">
+                    <h3 class="portfilio__card-title">Мобильный контроль</h3>
+                    <p class="portfilio__card-subtitle">Сервис для работы с клиентами и партнерами</p>
+                </article>
+                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_voice">
+                    <img src="images/voice_control.png" alt="голосовое_управление" class="portfilio__card-image">
+                    <h3 class="portfilio__card-title">Голосовое управление</h3>
+                    <p class="portfilio__card-subtitle">Сервис для работы по задачам</p>
+                </article>
+                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_vroom">
+                    <img src="images/vroom_games.png" alt="игры_врум" class="portfilio__card-image">
+                    <h3 class="portfilio__card-title">Vroomgames</h3>
+                    <p class="portfilio__card-subtitle">Сервис для работы со списками заказов</p>
+                </article>
+                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_atol">
+                    <img src="images/atol.png" alt="атол_бонус" class="portfilio__card-image">
+                    <h3 class="portfilio__card-title">ATOL-бонус</h3>
+                    <p class="portfilio__card-subtitle">Мобильное приложение для профессионалов</p>
+                </article>
+                <article class="portfilio__card portfolio__card_size_large portfilio__card_palce_prorab">
+                    <img src="images/prorab.png" alt="прораб_икс" class="portfilio__card-image">
+                    <h3 class="portfilio__card-title">Prorab-x</h3>
+                    <p class="portfilio__card-subtitle">Мобильное приложение для строителей</p>
+                </article>
+                <article class="portfilio__card portfolio__card_size_large portfilio__card_palce_actual">
+                    <img src="images/actual.png" alt="актуаль" class="portfilio__card-image">
+                    <h3 class="portfilio__card-title">Актуаль</h3>
+                    <p class="portfilio__card-subtitle">Сайт промо игры</p>
+                </article>
+            </div>
+            <div class="portfolio__buttons">
+                <button type="button" class="portfolio-button">Портфолио</button>
+                <button type="button" class="button-project-order button-project-order_place_portfolio">Заказать проект</button>
             </div>
         </section>
         <section class="benefits"></section>
