fix: block portfolio adaptate

--- a/index.html
+++ b/index.html
@@ -144,35 +144,35 @@
                     на заказ.</p>
             </div>
             <div class="portfolio__cards">
-                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_mobile">
-                    <img src="images/mobile_control.png" alt="мобильный_контроль" class="portfilio__card-image">
-                    <h3 class="portfilio__card-title">Мобильный контроль</h3>
-                    <p class="portfilio__card-subtitle">Сервис для работы с клиентами и партнерами</p>
+                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_mobile">
+                    <img src="images/mobile_control.png" alt="мобильный_контроль" class="portfolio__card-image">
+                    <h3 class="portfolio__card-title">Мобильный контроль</h3>
+                    <p class="portfolio__card-subtitle">Сервис для работы с клиентами и партнерами</p>
                 </article>
-                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_voice">
-                    <img src="images/voice_control.png" alt="голосовое_управление" class="portfilio__card-image">
-                    <h3 class="portfilio__card-title">Голосовое управление</h3>
-                    <p class="portfilio__card-subtitle">Сервис для работы по задачам</p>
+                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_voice">
+                    <img src="images/voice_control.png" alt="голосовое_управление" class="portfolio__card-image">
+                    <h3 class="portfolio__card-title">Голосовое управление</h3>
+                    <p class="portfolio__card-subtitle">Сервис для работы по задачам</p>
                 </article>
-                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_vroom">
-                    <img src="images/vroom_games.png" alt="игры_врум" class="portfilio__card-image">
-                    <h3 class="portfilio__card-title">Vroomgames</h3>
-                    <p class="portfilio__card-subtitle">Сервис для работы со списками заказов</p>
+                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_vroom">
+                    <img src="images/vroom_games.png" alt="игры_врум" class="portfolio__card-image">
+                    <h3 class="portfolio__card-title">Vroomgames</h3>
+                    <p class="portfolio__card-subtitle">Сервис для работы со списками заказов</p>
                 </article>
-                <article class="portfilio__card portfolio__card_size_small portfilio__card_palce_atol">
-                    <img src="images/atol.png" alt="атол_бонус" class="portfilio__card-image">
-                    <h3 class="portfilio__card-title">ATOL-бонус</h3>
-                    <p class="portfilio__card-subtitle">Мобильное приложение для профессионалов</p>
+                <article class="portfolio__card portfolio__card_size_small portfolio__card_palce_atol">
+                    <img src="images/atol.png" alt="атол_бонус" class="portfolio__card-image">
+                    <h3 class="portfolio__card-title">ATOL-бонус</h3>
+                    <p class="portfolio__card-subtitle">Мобильное приложение для профессионалов</p>
                 </article>
-                <article class="portfilio__card portfolio__card_size_large portfilio__card_palce_prorab">
-                    <img src="images/prorab.png" alt="прораб_икс" class="portfilio__card-image">
-                    <h3 class="portfilio__card-title">Prorab-x</h3>
-                    <p class="portfilio__card-subtitle">Мобильное приложение для строителей</p>
+                <article class="portfolio__card portfolio__card_size_large portfolio__card_palce_prorab">
+                    <img src="images/prorab.png" alt="прораб_икс" class="portfolio__card-image">
+                    <h3 class="portfolio__card-title">Prorab-x</h3>
+                    <p class="portfolio__card-subtitle">Мобильное приложение для строителей</p>
                 </article>
-                <article class="portfilio__card portfolio__card_size_large portfilio__card_palce_actual">
-                    <img src="images/actual.png" alt="актуаль" class="portfilio__card-image">
-                    <h3 class="portfilio__card-title">Актуаль</h3>
-                    <p class="portfilio__card-subtitle">Сайт промо игры</p>
+                <article class="portfolio__card portfolio__card_size_large portfolio__card_palce_actual">
+                    <img src="images/actual.png" alt="актуаль" class="portfolio__card-image">
+                    <h3 class="portfolio__card-title">Актуаль</h3>
+                    <p class="portfolio__card-subtitle">Сайт промо игры</p>
                 </article>
             </div>
             <div class="portfolio__buttons">
