feat: add blocks benefits and clients

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="root">
-    <header class="header">
+    <header class="header main-placement">
         <div class="heading">
             <a href="#" class="heading__logo-link">
                 <img src="/images/logo_ust.svg" alt="логотип" class="heading__logo">
@@ -180,8 +180,51 @@
                 <button type="button" class="button-project-order button-project-order_place_portfolio">Заказать проект</button>
             </div>
         </section>
-        <section class="benefits"></section>
-        <section class="clients"></section>
+        <section class="benefits main-placement"><div class="block-heading">
+            <h2 class="block-heading__title">Наши</h2>
+            <p class="block-heading__subtitle">Преимущества</p>
+            <p class="block-heading__description">Основная ценность нашей компании - создание качественного продукта и удовлетворение потребностей клиента. Поэтому перед началом разработки мы проводим маркетинговые исследования и помогаем клиенту определить стратегию развития продукта.</p>
+        </div>
+        <div class="cards cards_place_benefits">
+            <article class="cards__item cards__item_place_benefits">
+                <img src="images/icon_development.svg" alt="разработка_программного_обеспечения" class="cards__image">
+                <h3 class="cards__title cards__title_place_benefits">Разработка программного обеспечения</h3>
+                <p class="cards__subtitle">Мы обеспечиваем полный цикл разработки программного обеспечения, развертывания и послерелизной поддержки. Вы получите функциональный, масштабируемый и безопасный продукт, идеально подходящий для бизнеса.
+                    MVP за 90 дней.</p>
+            </article>
+            <article class="cards__item cards__item_place_benefits">
+                <img src="images/icon_saving.svg" alt="спасение_вашего_проекта" class="cards__image">
+                <h3 class="cards__title cards__title_place_benefits">«Спасение» вашего проекта</h3>
+                <p class="cards__subtitle">Мы присоединяемся к любому этапу разработки, анализируем текущее состояние продукта, возвращаем процесс разработки в нужное русло и выпускаем продукт вовремя.</p>
+            </article>
+            <article class="cards__item cards__item_place_benefits">
+                <img src="images/icon_creation.svg" alt="создание_выделенного_ит-центра" class="cards__image">
+                <h3 class="cards__title cards__title_place_benefits">Создание выделенного ИТ-центра</h3>
+                <p class="cards__subtitle">Мы предоставляем выделенные команды на полный рабочий день, включающие аналитиков, дизайнеров, разработчиков, QA-инженеров и менеджеров проектов. Соберите свою команду всего за несколько дней.</p>
+            </article>
+            <article class="cards__item cards__item_place_benefits">
+                <img src="images/icon_professionalism.svg" alt="профессионализм_команды" class="cards__image">
+                <h3 class="cards__title cards__title_place_benefits">Профессионализм команды</h3>
+                <p class="cards__subtitle">Избегайте затрат на инвестиции в развитие внутренних навыков. Нанимайте профессионалов с необходимыми навыками для обеспечения результатов проекта и своевременной доставки.</p>
+            </article>
+        </div></section>
+        <section class="clients main-placement">
+            <h2 class="clients__title">Клиенты</h2>
+            <div class="clients__container">
+                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
+                <img src="images/vector_atol.svg" alt="атол" class="clients__item">
+                <img src="images/vector_mondoro.svg" alt="мондоро" class="clients__item">
+                <img src="images/vector_vroom.svg" alt="врум" class="clients__item">
+                <img src="images/vector_actual.svg" alt="актуаль" class="clients__item">
+                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
+                <img src="images/vector_actual.svg" alt="актуаль" class="clients__item">
+                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
+                <img src="images/vector_atol.svg" alt="атол" class="clients__item">
+                <img src="images/vector_mondoro.svg" alt="мондоро" class="clients__item">
+                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
+                <img src="images/vector_vroom.svg" alt="врум" class="clients__item">
+            </div>
+        </section>
         <section class="contacts"></section>
         <section class="faq"></section>
     </main>
