feat: add contacts markup

--- a/index.html
+++ b/index.html
@@ -177,55 +177,116 @@
             </div>
             <div class="portfolio__buttons">
                 <button type="button" class="portfolio-button">Портфолио</button>
-                <button type="button" class="button-project-order button-project-order_place_portfolio">Заказать проект</button>
+                <button type="button" class="button-project-order button-project-order_place_portfolio">Заказать
+                    проект</button>
             </div>
         </section>
-        <section class="benefits main-placement"><div class="block-heading">
-            <h2 class="block-heading__title">Наши</h2>
-            <p class="block-heading__subtitle">Преимущества</p>
-            <p class="block-heading__description">Основная ценность нашей компании - создание качественного продукта и удовлетворение потребностей клиента. Поэтому перед началом разработки мы проводим маркетинговые исследования и помогаем клиенту определить стратегию развития продукта.</p>
-        </div>
-        <div class="cards cards_place_benefits">
-            <article class="cards__item cards__item_place_benefits">
-                <img src="images/icon_development.svg" alt="разработка_программного_обеспечения" class="cards__image">
-                <h3 class="cards__title cards__title_place_benefits">Разработка программного обеспечения</h3>
-                <p class="cards__subtitle">Мы обеспечиваем полный цикл разработки программного обеспечения, развертывания и послерелизной поддержки. Вы получите функциональный, масштабируемый и безопасный продукт, идеально подходящий для бизнеса.
-                    MVP за 90 дней.</p>
-            </article>
-            <article class="cards__item cards__item_place_benefits">
-                <img src="images/icon_saving.svg" alt="спасение_вашего_проекта" class="cards__image">
-                <h3 class="cards__title cards__title_place_benefits">«Спасение» вашего проекта</h3>
-                <p class="cards__subtitle">Мы присоединяемся к любому этапу разработки, анализируем текущее состояние продукта, возвращаем процесс разработки в нужное русло и выпускаем продукт вовремя.</p>
-            </article>
-            <article class="cards__item cards__item_place_benefits">
-                <img src="images/icon_creation.svg" alt="создание_выделенного_ит-центра" class="cards__image">
-                <h3 class="cards__title cards__title_place_benefits">Создание выделенного ИТ-центра</h3>
-                <p class="cards__subtitle">Мы предоставляем выделенные команды на полный рабочий день, включающие аналитиков, дизайнеров, разработчиков, QA-инженеров и менеджеров проектов. Соберите свою команду всего за несколько дней.</p>
-            </article>
-            <article class="cards__item cards__item_place_benefits">
-                <img src="images/icon_professionalism.svg" alt="профессионализм_команды" class="cards__image">
-                <h3 class="cards__title cards__title_place_benefits">Профессионализм команды</h3>
-                <p class="cards__subtitle">Избегайте затрат на инвестиции в развитие внутренних навыков. Нанимайте профессионалов с необходимыми навыками для обеспечения результатов проекта и своевременной доставки.</p>
-            </article>
-        </div></section>
+        <section class="benefits main-placement">
+            <div class="block-heading">
+                <h2 class="block-heading__title">Наши</h2>
+                <p class="block-heading__subtitle">Преимущества</p>
+                <p class="block-heading__description">Основная ценность нашей компании - создание качественного продукта
+                    и удовлетворение потребностей клиента. Поэтому перед началом разработки мы проводим маркетинговые
+                    исследования и помогаем клиенту определить стратегию развития продукта.</p>
+            </div>
+            <div class="cards cards_place_benefits">
+                <article class="cards__item cards__item_place_benefits">
+                    <img src="images/icon_development.svg" alt="разработка_программного_обеспечения"
+                        class="cards__image">
+                    <h3 class="cards__title cards__title_place_benefits">Разработка программного обеспечения</h3>
+                    <p class="cards__subtitle">Мы обеспечиваем полный цикл разработки программного обеспечения,
+                        развертывания и послерелизной поддержки. Вы получите функциональный, масштабируемый и безопасный
+                        продукт, идеально подходящий для бизнеса.
+                        MVP за 90 дней.</p>
+                </article>
+                <article class="cards__item cards__item_place_benefits">
+                    <img src="images/icon_saving.svg" alt="спасение_вашего_проекта" class="cards__image">
+                    <h3 class="cards__title cards__title_place_benefits">«Спасение» вашего проекта</h3>
+                    <p class="cards__subtitle">Мы присоединяемся к любому этапу разработки, анализируем текущее
+                        состояние продукта, возвращаем процесс разработки в нужное русло и выпускаем продукт вовремя.
+                    </p>
+                </article>
+                <article class="cards__item cards__item_place_benefits">
+                    <img src="images/icon_creation.svg" alt="создание_выделенного_ит-центра" class="cards__image">
+                    <h3 class="cards__title cards__title_place_benefits">Создание выделенного ИТ-центра</h3>
+                    <p class="cards__subtitle">Мы предоставляем выделенные команды на полный рабочий день, включающие
+                        аналитиков, дизайнеров, разработчиков, QA-инженеров и менеджеров проектов. Соберите свою команду
+                        всего за несколько дней.</p>
+                </article>
+                <article class="cards__item cards__item_place_benefits">
+                    <img src="images/icon_professionalism.svg" alt="профессионализм_команды" class="cards__image">
+                    <h3 class="cards__title cards__title_place_benefits">Профессионализм команды</h3>
+                    <p class="cards__subtitle">Избегайте затрат на инвестиции в развитие внутренних навыков. Нанимайте
+                        профессионалов с необходимыми навыками для обеспечения результатов проекта и своевременной
+                        доставки.</p>
+                </article>
+            </div>
+        </section>
         <section class="clients main-placement">
             <h2 class="clients__title">Клиенты</h2>
             <div class="clients__container">
-                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
-                <img src="images/vector_atol.svg" alt="атол" class="clients__item">
-                <img src="images/vector_mondoro.svg" alt="мондоро" class="clients__item">
-                <img src="images/vector_vroom.svg" alt="врум" class="clients__item">
-                <img src="images/vector_actual.svg" alt="актуаль" class="clients__item">
-                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
-                <img src="images/vector_actual.svg" alt="актуаль" class="clients__item">
-                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
-                <img src="images/vector_atol.svg" alt="атол" class="clients__item">
-                <img src="images/vector_mondoro.svg" alt="мондоро" class="clients__item">
-                <img src="images/vector_cinzano.svg" alt="чинзано" class="clients__item">
-                <img src="images/vector_vroom.svg" alt="врум" class="clients__item">
+                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
+                        class="clients__item"></a>
+                <a href="https://www.atol.ru/"><img src="images/vector_atol.svg" alt="атол" class="clients__item"></a>
+                <a href="https://mondoro.com/"><img src="images/vector_mondoro.svg" alt="мондоро"
+                        class="clients__item"></a>
+                <a href="https://www.vroom.org/"><img src="images/vector_vroom.svg" alt="врум"
+                        class="clients__item"></a>
+                <a href="https://qiosk.ru/brand/aktuali/"><img src="images/vector_actual.svg" alt="актуаль"
+                        class="clients__item"></a>
+                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
+                        class="clients__item"></a>
+                <a href="https://qiosk.ru/brand/aktuali/"><img src="images/vector_actual.svg" alt="актуаль"
+                        class="clients__item"></a>
+                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
+                        class="clients__item"></a>
+                <a href="https://www.atol.ru/"><img src="images/vector_atol.svg" alt="атол" class="clients__item"></a>
+                <a href="https://mondoro.com/"><img src="images/vector_mondoro.svg" alt="мондоро"
+                        class="clients__item"></a>
+                <a href="https://cinzano.com/"><img src="images/vector_cinzano.svg" alt="чинзано"
+                        class="clients__item"></a>
+                <a href="https://www.vroom.org/"><img src="images/vector_vroom.svg" alt="врум"
+                        class="clients__item"></a>
             </div>
         </section>
-        <section class="contacts"></section>
+        <section class="contacts">
+            <div class="contacts__container">
+                <h2 class="contacts__title">Связаться</h2>
+                <p class="contacts__subtitle">Готовы предложить Вам лучшие IT-решения</p>
+                <div class="form__container">
+                    <div class="form__description">
+                        <h3 class="form__description-title">Есть идея?</h3>
+                        <p class="form__description-subtitle">У вас есть уже существующий проект, который вы хотите усовершенствовать? Вы хотите воплотить в жизнь смелую идею, но вам нужна помощь? Или вы вообще не знаете, с чего начать реализацию проекта?</p>
+                        <div class="form__description-countries">
+                            <div class="form__description-slovenia">
+                                <h4 class="form__description-slovenia-title">Словения</h4>
+                                <p class="form__description-slovenia-contacts">contact@unionsmarttech.ru<br>+421 494 539-852</p>
+                            </div>
+                            <div class="form__description-russia">
+                                <h4 class="form__description-russia-title">Россия</h4>
+                                <p class="form__description-russia-contacts">contact@unionsmarttech.ru<br>+7 911 932-90-29</p>
+                            </div>
+                        </div>
+                        <ul class="form__description-links">
+                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
+                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
+                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
+                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
+                            <li><a href="" class="form__description-link"><img src="" alt="" class="form__description-liform__description-link-image"></a></li>
+                        </ul>
+                    </div>
+                    <form action="" class="contact__form">
+                        <h5 class="contact__form-title">Связаться с нами</h5>
+                        <p class="contact__form-subtitle">Оставьте свою контактную информацию, и мы с радостью свяжемся с вами!</p>
+                        <input type="text" placeholder="Имя" class="">
+                        <input type="text" placeholder="Компания" class="">
+                        <input type="email" placeholder="Электронная почта" class="">
+                        <input type="text" placeholder="Сообщение" class="">
+                        <button type="submit">Отправить</button>
+                    </form>
+                </div>
+            </div>
+        </section>
         <section class="faq"></section>
     </main>
     <footer class="footer"></footer>
